cabal-version:       3.4
name:                datatypes
version:             0.1.0.0
build-type:          Simple
extra-source-files:  README.md

common commmon
  ghc-options:         -Wall
  build-depends:       base ^>=4.16.4.0

library
  import:              commmon
  hs-source-dirs:      src
  exposed-modules:     Datatypes
                     , Tables
                     , Transactions

test-suite datatypes-tests
  import:              commmon
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  other-modules:       DatatypesSpec
                     , TablesSpec
                     , TransactionsSpec
  build-depends:       containers
                     , hspec
                     , datatypes
                     , QuickCheck
  build-tool-depends:  hspec-discover:hspec-discover

test-suite datatypes-doctests
  import:              commmon
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:       doctest
                     , datatypes
                     , template-haskell
  ghc-options:         -threaded -Wno-type-defaults -Wincomplete-uni-patterns
  hs-source-dirs:      doctest
